<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_light"
    android:orientation="vertical"
    android:padding="21sp"
    tools:context=".Activities.InfoActivity">

    <ImageView
        android:layout_gravity="center_horizontal"
        android:layout_width="120sp"
        android:layout_height="120sp"
        android:src="@mipmap/ic_launcher"
        />
    <TextView
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginBottom="34dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"/>
    <TextView
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="34dp"
        android:textSize="16sp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_desc"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"
        android:layout_marginBottom="34dp"
        />

    <TextView
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/group_members"/>

    <TextView
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/aayush_subedi"
        app:drawableLeftCompat="@android:drawable/ic_menu_myplaces" />
    <TextView
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/jianxuan_li"
        app:drawableLeftCompat="@android:drawable/ic_menu_myplaces" />
    <TextView
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/krupa_suhagiya"
        app:drawableLeftCompat="@android:drawable/ic_menu_myplaces" />
    <TextView
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/smit_mehta"
        app:drawableLeftCompat="@android:drawable/ic_menu_myplaces" />



</LinearLayout>