<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.FormActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            style="@style/text_style"
            app:placeholderText="@string/title"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edittext_background"/>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/text_style"
            app:placeholderText="@string/decsription"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:layout_marginBottom="10dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/text_style"
            app:placeholderText="@string/brand"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtBrand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:layout_marginBottom="10dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/text_style"
            app:placeholderText="@string/spinner"/>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spnCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:layout_marginBottom="50dp"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="280dp"
                android:layout_height="280dp"
                android:layout_marginBottom="20dp" />

            <ImageView
                android:id="@+id/imageview"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_centerInParent="true" />
        </RelativeLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pickimage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text_style"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            app:placeholderText="@string/image"/>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/text_style"
            app:placeholderText="@string/date"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/expDate"
                android:layout_width="140dp"
                android:layout_height="30dp"
                android:text="@string/select_exp_date"
                android:background="@drawable/edittext_background"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/remDate"
                android:layout_width="140dp"
                android:layout_height="30dp"
                android:text="@string/select_rem_date"
                android:background="@drawable/edittext_background"
                android:layout_marginBottom="10dp"/>


        </LinearLayout>
    </LinearLayout>

</ScrollView>